<resources>
    <string name="app_name">App4-Grocery Needs</string>
    <string name="action_settings">Settings</string>


    <string name="add_item">Add Item</string>
    <string name="drop_db">DROP TABLE IF EXISTS </string>
    <string name="title">Enter Item</string>
    <string name="item_name">Item Name</string>
    <string name="item_quantity">Quantity</string>
    <string name="item_brand">Brand</string>
    <string name="item_size">Size</string>
    <string name="save">Save</string>
    <string name="Edit">TODO</string>
    <string name="Delete">TODO</string>
</resources>