<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:padding="3dp"
                android:id="@+id/enter_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
               android:layout_centerHorizontal="true"
                android:text="@string/title"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/enter_item"
                android:autofillHints=""
                android:hint="@string/item_name"
                android:inputType="text"
          />

            <EditText
                android:id="@+id/itemQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemName"
                android:autofillHints=""
                android:hint="@string/item_quantity"
                android:inputType="number|text" />

            <EditText
                android:id="@+id/itemBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemQuantity"
                android:hint="@string/item_brand"
                android:inputType="text"
                android:autofillHints="" />

            <EditText
                android:id="@+id/itemSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemBrand"
                android:autofillHints=""
                android:hint="@string/item_size"
                android:inputType="number|text" />

            <Button
                android:id="@+id/save_button"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemSize"
                android:background="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="@string/save"
                android:textColor="@android:color/white"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>