<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:text="@string/title"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quantity"
                android:text="@string/title"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/brand"
                android:text="@string/title"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/size"
                android:text="@string/title"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/size"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/edit"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="3dp"
                    android:contentDescription="@string/Edit"
                    android:src="@drawable/ic_baseline_account_circle_24" />

                <ImageButton
                    android:id="@+id/delete"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="3dp"
                    android:contentDescription="@string/Delete"
                    android:src="@android:drawable/ic_menu_delete" />

            </TableRow>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>